--- a/style1.css
+++ b/style1.css
@@ -21,6 +21,9 @@ h1 {
     margin-top: 5vh;
     font-family: 'Catamaran', sans-serif;
 }
+h2 p{
+    font-size: 22px;
+}
 .h6 {
     font-family: 'Catamaran', sans-serif;
     color: rgba(70, 69, 66, 0.952);
@@ -164,7 +167,7 @@ hr {
     margin-left: 20vh;
 }
 .line {
-    margin-left: 20vh;
+    margin-left: 30vh;
 }
 .blok3_section2 {
     display: flex;
@@ -470,6 +473,8 @@ justify-content: flex-end;
     height: 4em;
     width: 18em;
 }
-.backoff {
-    margin-top: 10vh;
+.Futer {
+    margin-top: 15vh;
+    background-color: rgb(51, 51, 51);
+    height: 100%;
 }
