--- a/style1.css
+++ b/style1.css
@@ -55,7 +55,7 @@ h1 {
     text-transform: uppercase;
 }
 .blok2 p {
-    line-height: 0,2px;
+    height: 0,2px;
 }
 .text1 span {
     color: #eccd0c;
@@ -136,7 +136,6 @@ h3 span {
 }
 hr {
     color: #eccd0c;
-    size: 6px;
     position: relative;
     top: 8vh;
 }
@@ -318,6 +317,10 @@ h4 span {
     position: relative;
     margin-top: -15vh;
     z-index: 1;
+}
+.blok6_button {
+    display: flex;
+    justify-content: center;
 }
 #blok6_button {
     display: flex;
