--- a/style/style1.css
+++ b/style/style1.css
@@ -19,7 +19,10 @@ margin-left: 5vw;
 .container-right {
     display: flex;
     flex-direction: column;
-    margin-right: 5vw;
+    margin-right: 5vw;   
+}
+.container-right button{
+    margin-top: 2vh;
 }
 h1 {
     padding-top: 2vh;
@@ -45,14 +48,21 @@ h1 {
 }
 .blok2 {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     background-image: url(../img/background1.jpg);
     background-position-y: 100vh;
     height: 100vh;
     background-size: cover;
 }
+.blok2_top {
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 5vw;
+    margin-right: 5vw;
+}
 .text1 {
-    margin-top: 15vh;
+    margin-top: 1vh;
     color: white;
     font-size: 40px;
     font-family: 'Ubuntu', sans-serif;
@@ -71,17 +81,20 @@ h1 {
     color: #eccd0c;
 }
 .blok2_right {
-    margin-top: 20vh;
-    margin-left: 9vw;
+    margin-top: 5vh;
+    margin-left: 5%;
 }
 .image2 {
     position: relative;
-    margin-left: 10vw;
+    margin-top: 0%;
+    margin-left: 60%;
+}
+.blok2-sale{
+    justify-content: center;
 }
 .text3 {
-    position: absolute;
-    margin-left: 12vw;
-    margin-top: -14vh;
+    padding-left: 75%;
+    margin-top: -48%;
     color: #eccd0c;
     font-size: 25px;
     font-family: 'Ubuntu', sans-serif;
@@ -91,6 +104,9 @@ h1 {
     color: white;
     text-decoration: line-through;
     text-decoration-color: red;
+}
+.blok2_countdown {
+    margin-left: 5vw;
 }
 #number-countdown p {
     position: relative;
@@ -109,7 +125,7 @@ h1 {
     color: rgb(51, 51, 51);
     
 }
-.blok2_left button {
+.blok2_countdown button {
     margin-top: 5vh;
     background-color: #eccd0c;
     color: rgb(51, 51, 51);
@@ -172,6 +188,10 @@ hr {
 .line-center {
     width: 400px;
     font-size: 4px;
+}
+.line-mob {
+    width: 0px;
+    font-size: 0px;  
 }
 .line {
    margin-left: 30vh;
@@ -361,6 +381,9 @@ h4 span {
     -o-transform: rotate(270deg) translate(0px, 25px);
     -ms-transform: rotate(270deg) translate(0px, 25px);
 }
+#arrow-left-mob,#arrow-right-mob {
+    display: none;
+}
 .blok7_section1 {
     display: flex;
     justify-content: center;
@@ -427,8 +450,12 @@ justify-content: flex-end;
 }
 .blok9_text1 {
     margin-top: 10vh;
+    margin-left: 20%;
     display: block;
     position: relative;
+}
+#image19-mob {
+    display: none;
 }
 #image19 {
     margin-top: 5vh;
@@ -450,25 +477,39 @@ justify-content: flex-end;
     bottom: 15vh;
     left: 35vh;
 }
-.sale {
-    position: absolute;
-    top: 35vh;
-    left: 11vh;
+.sale{
+   position: absolute; 
 }
-.blok6-image14 {
+.blok9_image2 {
+margin-top: 65%;
+margin-left: 180%;
+}
+.blok9-image14 {
     margin-top: 20vh;
-}
-.blok9_text2 {
-    margin-left: 25vh;
-    margin-top: 10vh;
-    display: block;
-    position: relative;
 }
 .blok9_section1 {
     display: flex;
-    justify-content: center;
-    margin-left: 10vh;
+    justify-content: space-between;
     margin-top: 5vh;
+}
+.block9_text3{
+    margin-left: 210%;
+    margin-top: -90%;
+    color: #eccd0c;
+    font-size: 25px;
+    font-family: 'Ubuntu', sans-serif;
+    transform: rotate(35deg);
+}
+.block9_text3 span {
+    color: white;
+    text-decoration: line-through;
+    text-decoration-color: red;
+}
+.blok9_text2 {
+    margin-right: 20%;
+    margin-top: 10vh;
+    display: block;
+    position: relative;
 }
 #windowlogin {
     margin-top: 10vh;
@@ -494,22 +535,369 @@ justify-content: flex-end;
     width: 18em;
 }
 .Futer {
+    display: flex;
+    justify-content: center;
     margin-top: 15vh;
     background-color: rgb(51, 51, 51);
     height: 100%;
 }
-
+.futer-text {
+    font-family: 'Work Sans', sans-serif;
+    font-family: 'Great Vibes', cursive;
+    font-size: 20px;
+    color: white;
+}
+@media (min-width: 1500px) {
+    .container-left {
+        margin-left: 20%;
+        }
+        .container-right {
+            margin-right: 20%;
+        }
+        .blok2_top {
+            margin-left: 20%;
+            margin-right: 20%;
+        } 
+        .blok2_countdown {
+            margin-left: 20%;
+        }
+}
 @media (max-width: 520px) {
 .container-right {
     display: none;
 }
 .container-left {
 display: block;
-margin-left: 5vw;
+margin-left: 10%;
 width: 100%;
 }
 .container-left p{
     font-size: 15px; 
 }
-
+.blok2 {
+    display: block;
+    justify-content: center;
+    background-image: url(../img/backgroundmob.jpg);
+    background-position-y: 100vh;
+    height: 100vh;
+    background-size: cover;
+}
+.blok2_top {
+    margin-top: 5%;
+    display: block;
+    margin-left: 5vw;
+    margin-right: 5vw;
+}
+#image1 {
+    width: 100%;
+}
+.text1 {
+    margin-top: 5vh;
+    margin-left: 5%;
+    color: white;
+    font-size: 25px;
+    font-family: 'Ubuntu', sans-serif;
+    text-transform: uppercase;
+}
+.text1 span {
+    color: #eccd0c;
+}
+.text2 {
+    margin-top: 3vh;
+    margin-left: 5%;
+    color: white;
+    font-size: 20px;
+    font-family: 'Ubuntu', sans-serif;
+}
+.image2 {
+    position: relative;
+    width: 30%;
+    margin-top: -33%;
+    margin-left: 69%;
+}
+.text3 {
+    padding-left: 85%;
+    margin-top: -50%;
+    color: #eccd0c;
+    font-size: 15px;
+    font-family: 'Ubuntu', sans-serif;
+    transform: rotate(35deg);
+}
+.blok2-sale{
+    justify-content: center;
+}
+.text2 span {
+    color: #eccd0c;
+}
+.blok2_countdown {
+    margin-left: 5vw;
+    margin-top: 15%;
+}
+/*blok3*/
+.line-center {
+    width: 200px;
+    font-size: 4px;
+}
+.blok3_section1 {
+    display: block;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 15%;
+}
+.blok3_text2 {
+    margin-top: 10%;
+    margin-left: 0%;
+}
+.blok3_text3 {
+    margin-left: 0%;
+    display: flex;
+    justify-content: center;
+}
+.line-mob{
+    width: 100px;
+    font-size: 4px;
+}
+.line {
+    margin-left: 0vh;
+ }
+ .line hr{
+     width: 0px;
+     font-size: 0px;
+ }
+ .br-mob {
+     display: none;
+ }
+#image5 {
+    display: none;
+}
+/*blok4*/
+.blok4_section1 {
+    display: block;
+    margin-left: 10vh;
+    margin-right: 10vh;
+    margin-top: 10vh;
+}
+/*blok5*/
+#video {
+    width: 380px;
+    height: auto;
+}
+/*blok6*/
+.blok6_section1 {
+    display: block;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5vh;
+}
+#h4-mob {
+    margin-top: 15%;
+}
+#image10 {
+    margin-top: 15%;
+    width: 100%;
+    height: auto;
+}
+#image11 {
+    width: 50%;
+    height: auto;
+}
+#image12 {
+    margin-left: 5%;
+    width: 45%;
+    height: auto;
+}
+.blok6_text1 img{
+    margin-top: 5%;
+}
+.blok6_text1 {
+margin: 0%;
+}
+#image13 {
+    margin-top: 5vh;
+    width: 100%;
+    height: auto;
+}
+#image14 {
+    width: 100%;
+    height: auto;
+}
+/*blok7*/
+#arrow-left-pc,#arrow-right-pc {
+    display: none;
+}
+.blok7_section1 {
+    display: block;
+    margin-top: 25%;
+}
+.blok7-image15 {
+ margin-left: 5%;
+ margin-right: 5%;
+}
+#image15 {
+    width: 100%;
+    height: auto;
+}
+#arrow-left-mob,#arrow-right-mob {
+    display: flex;
+}
+.blok7_lap {
+    margin-top: 1vh;
+    display: flex;
+    justify-content: center;
+}
+.blok7_lap img {
+    margin-top: 2.5%;
+    height: 10%;
+    width: auto;
+}
+.arrow{
+    width: 0px;
+    height: 0px;
+    border: 15px solid transparent; 
+    border-top-color: #eccd0c; 
+    margin: 0;
+    padding: 0;
+    float: left;
+}
+.arrow:before{
+    content:'';
+    width: 0px;
+    height: 0px;
+    border: 5px solid transparent; 
+    border-top-color: white;
+    display: inline-block;
+    -webkit-transform: translate(-5px, -15px);
+}
+.arrow.left{
+    margin-top: 0.5vh;
+    margin-right: 25%;
+    transform: rotate(90deg) translate(0px, 25px);
+    -webkit-transform: rotate(90deg) translate(0px, 25px);
+    -moz-transform: rotate(90deg) translate(0px, 25px);
+    -o-transform: rotate(90deg) translate(0px, 25px);
+    -ms-transform: rotate(90deg) translate(0px, 25px);
+}
+.arrow.right{
+    margin-top: 0.5vh;
+    margin-left: 25%;
+    transform: rotate(270deg) translate(0px, 25px);
+    -webkit-transform: rotate(270deg) translate(0px, 25px);
+    -moz-transform: rotate(270deg) translate(0px, 25px);
+    -o-transform: rotate(270deg) translate(0px, 25px);
+    -ms-transform: rotate(270deg) translate(0px, 25px);
+}
+.blok7-text {
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
+}
+.blok7-reveniew {
+    display: flex;
+    justify-content: center;
+    }
+/*blok8*/
+.blok8_section {
+    margin-left: 5%;
+    margin-top: 20%;
+    margin-right: 10%;
+}
+.blok8-h4 {
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+.blok8_text1 {
+    display: block;
+    justify-content: center;
+    margin-top: 10%;
+    margin-left: 0vh;
+    margin-right: 0vh;
+}
+.text1_logo1 {
+    margin-left: 0vh;
+}
+.blok8_text2 {
+    display: flex;
+    flex-direction: column;
+    margin-left: 5%;
+    margin-top: 5%;
+    margin-right: 10%;
+}
+/*blok9*/
+#blok9-h3 {
+    font-size: 18px;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+.blok9_section1 {
+    display: block;
+    margin-top: 20%;
+}
+.blok9_text1 {
+    margin-top: 5vh;
+    margin-left: 5%;
+    display: block;
+    position: relative;
+}
+#image19 {
+display: none;
+}
+#image19-mob {
+    display: block;
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+#plus1 {
+    font-family: 'Ubuntu', sans-serif;
+    color: #eccd0c;
+    font-size:90px;
+    font-weight: bolder;
+}
+.blok9-plus {
+    position: relative;
+    bottom: 5vh;
+    left: 0vh;
+    z-index: 1;
+}
+#image20 {
+    margin-top: -125%;
+    z-index: 4;
+    width: 100%;
+    transform: scaleX(-1);
+    position: static;
+}
+.block9_text3{
+    margin-left: 4%;
+    margin-top: -8%;
+    color: #eccd0c;
+    font-size: 25px;
+    font-family: 'Ubuntu', sans-serif;
+    transform: rotate(35deg);
+    }
+.sale{
+    position: relative;
+    z-index: 3; 
+     }
+.block9_text3 span {
+    color: white;
+    text-decoration: line-through;
+    text-decoration-color: red;
+    }
+.blok9_image2 {
+    margin-top: 0%;
+    margin-left: 0%;
+    }
+.blok9-image14 {
+    margin-top: 0vh;
+    }
+    .blok9_text2 {
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-top: -20%;
+        display: block;
+        position: relative;
+    }
 }
